Wed Aug 13 14:28:12 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * NEWS:

          Edited content that I added to this release.

Tue Aug 12 20:53:34 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * configure:

          Use the _no_makefiles version of the archive.  Previously, it
          contained more than the 65k+ file limit.  We don't need them
          anyway.

Tue Aug 12 19:19:29 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * NEWS:

          Updates for 3.5.1 release.

        * dds/DCPS/WriterInfo.h:

          Fix fuzz.

Tue Aug 12 15:01:54 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Properly retain timer for end_historic_samples cleanup, and
          handle when not cancelled.

Mon Aug 11 21:20:50 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/WriterInfo.h:
        * dds/DCPS/WriterInfo.cpp:

          Recover from missing end_historic_samples message and resume
          sample processing.

Sat Aug  9 18:20:37 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:

          Fuzz fix.

Fri Aug  8 22:23:33 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:

          Restore durable history processing, detect RTPS_UDP and ignore.

        * dds/DCPS/transport/framework/TransportClient.h:

          Make add_link() virtual.

        * dds/DCPS/transport/framework/TransportImpl.h:

          Make transport_type() protected.

        * tests/DCPS/PersistentInfoRepo:

          Set svn:ignore

        * tests/DCPS/TransientLocalTest/DataReaderListener.cpp:

          Log using thread/PID and ACE_DEBUG.

        * tests/DCPS/TransientLocalTest/run_test.pl:

          Remove extra logging of subscriber command line.

Thu Aug  7 17:09:50 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
