@@ -56,7 +56,7 @@ WriterInfoListener::writer_removed(WriterInfo& )
 WriterInfo::WriterInfo()
   : last_liveliness_activity_time_(ACE_OS::gettimeofday()),
   seen_data_(false),
-  historic_samples_timer_(-1),
+  awaiting_historic_samples_(false),
   state_(NOT_SET),
   reader_(0),
   writer_id_(GUID_UNKNOWN),
@@ -74,9 +74,7 @@ WriterInfo::WriterInfo(WriterInfoListener*         reader,
   : last_liveliness_activity_time_(ACE_OS::gettimeofday()),
   seen_data_(false),
   // Only check reader qos, because durable connection depends on it
-  historic_samples_timer_(
-    // Set to non-zero so timer is scheduled
-    reader_qos.durability.kind > DDS::VOLATILE_DURABILITY_QOS ? -1 : 0),
+  awaiting_historic_samples_(reader_qos.durability.kind > DDS::VOLATILE_DURABILITY_QOS),
   state_(NOT_SET),
   reader_(reader),
   writer_id_(writer_id),
